# geki_pico

./: .gitignore  README.md  README_CN.md
3DPrint/: geki_pico_bottom.stl  geki_pico_button_aux.stl  geki_pico_button_main_choc_v1.stl  geki_pico_button_main_choc_v2.stl  geki_pico_lever_base.stl  geki_pico_lever_fixer.stl  geki_pico_lever_handle.stl  geki_pico_lever_shaft.stl  geki_pico_support_no_cover.stl
PCB/Lib/: geki_main.kicad_sym
PCB/Lib/geki_main.pretty/: RS45112A400G_RS45N1214001.kicad_mod  Solder_2P.kicad_mod
PCB/main/: Housing - PCB.dxf  fp-info-cache  fp-lib-table  geki_main.kicad_pcb  geki_main.kicad_prl  geki_main.kicad_pro  geki_main.kicad_sch  geki_main.kicad_sym  sym-lib-table
Production/3DPrint/: geki_pico_bottom.stl  geki_pico_button_main_choc_v1.stl  geki_pico_lever_fixer.stl  geki_pico_lever_handle.stl  geki_pico_lever_rotator_5mm.stl  geki_pico_lever_rotator_6mm .stl  geki_pico_lever_shaft_6mm.stl  geki_pico_support.stl  geki_pico_support_4_tof.stl  geki_pico_top.3mf  geki_pico_top.stl
Production/Firmware/: geki_pico.uf2  geki_pico_rp2350.uf2
cad/: TOF200C.f3d  TOF200C.step
firmware/: CMakeLists.txt  cli.c  geki_pico.uf2
firmware/src/: CMakeLists.txt  airkey.c  airkey.h  board_defs.h  button.c  button.h  cli.c  cli.h  commands.c  commands.h  config.c  config.h  extled.c  extled.h  gimbal.c  gimbal.h  hid.c  lever.c  lever.h  light.c  light.h  main.c  music.h  ring.h  sound.c  sound.h  usb_descriptors.c  usb_descriptors.h  vl53l0x.c  vl53l0x.h  vl53l1x.c  vl53l1x.h  wad.c  wad.h  wad_off_wav.h  wad_on_wav.h
(+4 files in other folders)
